Some more work on the OpenAI Conversation. Pasted OpenAIConversation that will be sent in PR to Dr. Wolber. Added worksheet pdf that is being used as testing for uploading functionality